--- a/index.html
+++ b/index.html
@@ -46,15 +46,63 @@
                     </p>
                 </header>
 
+                <h2 id="D20240522">May 22nd, 2024</h2>
+
+                <ul>
+                    <li><strong>APWorld Update</strong> Into the Breach [<a href="apworlds.html#IntoTheBreach">Link</a>]</li>
+                </ul>
+
+                <ul>
+                    <li><strong>Game Mod Update</strong> Into the Breach [<a href="apworlds.html#IntoTheBreach">Link</a>]</li>
+                </ul>
+
+                <ul>
+                    <li><strong>Manual APWorld Update</strong> Blast Corps [<a href="apworlds.html#Manual">Link</a>]</li>
+                    <li><strong>Manual APWorld Update</strong> The Grinch [<a href="apworlds.html#Manual">Link</a>]</li>
+                </ul>
+
+                <ul>
+                    <li><strong>New Manual APWorld</strong> Rainworld (Modded) [<a href="apworlds.html#Manual">Link</a>]</li>
+                </ul>
+
                 <h2 id="D20240521">May 21st, 2024</h2>
 
                 <ul>
+                    <li><strong>APWorld Update</strong> Bloons TD 6 [<a href="apworlds.html#BloonsTD6">Link</a>]</li>
+                    <li><strong>APWorld Update</strong> Hades [<a href="apworlds.html#Hades">Link</a>]</li>
+                    <li><strong>APWorld Update</strong> Hatsune Miku: Project DIVA Mega Mix+ [<a href="apworlds.html#HatsuneMikuProjectDIVAMegaMix">Link</a>]</li>
+                    <li><strong>APWorld Update</strong> Metroid Prime [<a href="apworlds.html#MetroidPrime">Link</a>]</li>
+                    <li><strong>APWorld Update</strong> Pokemon Crystal [<a href="apworlds.html#PokemonCrystal">Link</a>]</li>
+                    <li><strong>APWorld Update</strong> Scooby-Doo! Night of 100 Frights [<a href="apworlds.html#ScoobyDooNightOf100Frights">Link</a>]</li>
                     <li><strong>APWorld Update</strong> Super Junkoid (Super Metroid Hack) [<a href="apworlds.html#SuperJunkoid">Link</a>]</li>
                 </ul>
 
                 <ul>
+                    <li><strong>Beta APWorld Update</strong> The Witness [<a href="apworlds.html#TheWitness">Link</a>]</li>
+                </ul>
+
+                <ul>
+                    <li><strong>Game Mod Update</strong> Bloon TD 6 [<a href="apworlds.html#BloonsTD6">Link</a>]</li>
+                    <li><strong>Game Mod Update</strong> Grim Dawn [<a href="apworlds.html#GrimDawn">Link</a>]</li>
+                    <li><strong>Game Mod Update</strong> Hades [<a href="apworlds.html#Hades">Link</a>]</li>
+                    <li><strong>Game Mod Update</strong> Hatsune Miku: Project DIVA Mega Mix+ [<a href="apworlds.html#HatsuneMikuProjectDIVAMegaMix">Link</a>]</li>
+                </ul>
+
+                <ul>
+                    <li><strong>Manual APWorld Update</strong> Black Souls [<a href="apworlds.html#Manual">Link</a>]</li>
+                    <li><strong>Manual APWorld Update</strong> Clubhouse Games: 51 Worldwide Classics [<a href="apworlds.html#Manual">Link</a>]</li>
                     <li><strong>Manual APWorld Update</strong> Genshin Impact [<a href="apworlds.html#Manual">Link</a>]</li>
+                    <li><strong>Manual APWorld Update</strong> HuniePop [<a href="apworlds.html#Manual">Link</a>]</li>
                     <li><strong>Manual APWorld Update</strong> Putt-Putt [<a href="apworlds.html#Manual">Link</a>]</li>
+                </ul>
+
+                <ul>
+                    <li><strong>New Manual APWorld</strong> Bad Piggies [<a href="apworlds.html#Manual">Link</a>]</li>
+                </ul>
+
+                <ul>
+                    <li><strong>Tracker Update</strong> A Hat in Time [<a href="apworlds.html#AHatInTime">Link</a>]</li>
+                    <li><strong>Tracker Update</strong> Pokemon Crystal [<a href="apworlds.html#PokemonCrystal">Link</a>]</li>
                 </ul>
 
                 <h2 id="D20240520">May 20th, 2024</h2>
