--- a/apworlds.html
+++ b/apworlds.html
@@ -789,6 +789,7 @@
 
                 <ul>
                     <li><strong>APWorld</strong> [<a href="https://github.com/TheLX5/Archipelago/releases">Link</a>]</li>
+                    <li><strong>Tracker/strong> [<a href="https://github.com/BrianCumminger/megamanx-ap-poptracker/releases">Link</a>]</li>
                     <li><strong>Discord Thread</strong> [<a href="https://discord.com/channels/731205301247803413/1134349743984742520">Link</a>]</li>
                 </ul>
 
