--- a/index.html
+++ b/index.html
@@ -46,27 +46,55 @@
                     </p>
                 </header>
 
+                <h2 id="D20240524">May 24th, 2024</h2>
+
+                <ul>
+                    <li><strong>APWorld Update</strong> Banjo-Tooie [<a href="apworlds.html#BanjoTooie">Link</a>]</li>
+                    <li><strong>APWorld Update</strong> Final Fantasy Tactics Advance [<a href="apworlds.html#FinalFantasyTacticsAdvance">Link</a>]</li>
+                    <li><strong>APWorld Update</strong> Mega Man X3 [<a href="apworlds.html#MegaManX3">Link</a>]</li>
+                    <li><strong>APWorld Update</strong> Super Mario Sunshine [<a href="apworlds.html#SuperMarioSunshine">Link</a>]</li>
+                </ul>
+
+                <ul>
+                    <li><strong>New Manual APWorld</strong> KoboldKare [<a href="apworlds.html#Manual">Link</a>]</li>
+                </ul>
+
+                <ul>
+                    <li><strong>New Prerelease APWorld</strong> Muse Dash [<a href="apworlds.html#MuseDash">Link</a>]</li>
+                </ul>
+
+                <ul>
+                    <li><strong>New Prerelease Game Mod</strong> Muse Dash [<a href="apworlds.html#MuseDash">Link</a>]</li>
+                </ul>
+
                 <h2 id="D20240523">May 23rd, 2024</h2>
 
                 <ul>
+                    <li><strong>APWorld Update</strong> Lethal Company [<a href="apworlds.html#LethalCompany">Link</a>]</li>
                     <li><strong>APWorld Update</strong> Lunacid [<a href="apworlds.html#Lunacid">Link</a>]</li>
                 </ul>
 
                 <ul>
                     <li><strong>Game Mod Update</strong> Hatsune Miku: Project DIVA Mega Mix+ [<a href="apworlds.html#HatsuneMikuProjectDIVAMegaMix">Link</a>]</li>
+                    <li><strong>Game Mod Update</strong> Lethal Company [<a href="apworlds.html#LethalCompany">Link</a>]</li>
                     <li><strong>Game Mod Update</strong> Lunacid [<a href="apworlds.html#Lunacid">Link</a>]</li>
                     <li><strong>Game Mod Update</strong> Stardew Valley [<a href="apworlds.html#StardewValley">Link</a>]</li>
                 </ul>
 
                 <ul>
                     <li><strong>Manual APWorld Update</strong> Bad Piggies [<a href="apworlds.html#Manual">Link</a>]</li>
+                    <li><strong>Manual APWorld Update</strong> Friday Night Funkin' [<a href="apworlds.html#Manual">Link</a>]</li>
+                    <li><strong>Manual APWorld Update</strong> Pizza Tower [<a href="apworlds.html#Manual">Link</a>]</li>
+                    <li><strong>Manual APWorld Update</strong> The Grinch [<a href="apworlds.html#Manual">Link</a>]</li>
                 </ul>
 
                 <ul>
                     <li><strong>New Manual APWorld</strong> A Dance of Fire and Ice [<a href="apworlds.html#Manual">Link</a>]</li>
+                    <li><strong>New Manual APWorld</strong> Hollow Knight - Godhome [<a href="apworlds.html#Manual">Link</a>]</li>
                 </ul>
 
                 <ul>
+                    <li><strong>Tracker Update</strong> CrossCode [<a href="apworlds.html#CrossCode">Link</a>]</li>
                     <li><strong>Tracker Update</strong> Lunacid [<a href="apworlds.html#Lunacid">Link</a>]</li> 
                 </ul>
 
@@ -96,6 +124,10 @@
                     <li><strong>New Manual APWorld</strong> Beat Saber [<a href="apworlds.html#Manual">Link</a>]</li>
                     <li><strong>New Manual APWorld</strong> Friday Night Funkin' [<a href="apworlds.html#Manual">Link</a>]</li>
                     <li><strong>New Manual APWorld</strong> Rainworld (Modded) [<a href="apworlds.html#Manual">Link</a>]</li>
+                </ul>
+
+                <ul>
+                    <li><strong>New Tracker</strong> Mega Man X [<a href="apworlds.html#MegaManX">Link</a>]</li>
                 </ul>
 
                 <h2 id="D20240521">May 21st, 2024</h2>
