--- a/index.html
+++ b/index.html
@@ -46,11 +46,24 @@
                     </p>
                 </header>
 
+                <h2 id="D20240525">May 25th, 2024</h2>
+                
+                <ul>
+                    <li><strong>APWorld Update</strong> Kingdom Hearts 1 Final Mix [<a href="apworlds.html#KingdomHearts1">Link</a>]</li>
+                    <li><strong>APWorld Update</strong> Super Mario Land 2 [<a href="apworlds.html#SuperMarioLand2">Link</a>]</li>
+                </ul>
+
+                <ul>
+                    <li><strong>Manual APWorld Update</strong> Black Souls [<a href="apworlds.html#Manual">Link</a>]</li>
+                    <li><strong>Manual APWorld Update</strong> The Grinch [<a href="apworlds.html#Manual">Link</a>]</li>
+                </ul>
+
                 <h2 id="D20240524">May 24th, 2024</h2>
 
                 <ul>
                     <li><strong>APWorld Update</strong> Banjo-Tooie [<a href="apworlds.html#BanjoTooie">Link</a>]</li>
                     <li><strong>APWorld Update</strong> Final Fantasy Tactics Advance [<a href="apworlds.html#FinalFantasyTacticsAdvance">Link</a>]</li>
+                    <li><strong>APWorld Update</strong> Mega Man X [<a href="apworlds.html#MegaManX">Link</a>]</li>
                     <li><strong>APWorld Update</strong> Mega Man X3 [<a href="apworlds.html#MegaManX3">Link</a>]</li>
                     <li><strong>APWorld Update</strong> Super Mario Sunshine [<a href="apworlds.html#SuperMarioSunshine">Link</a>]</li>
                 </ul>
