--- a/index.html
+++ b/index.html
@@ -46,15 +46,51 @@
                     </p>
                 </header>
 
+                <h2 id="D20240527">May 27th, 2024</h2>
+
+                <ul>
+                    <li><strong>Beta APWorld Update</strong> The Witness [<a href="apworlds.html#TheWitness">Link</a>]</li>
+                </ul>
+
+                <ul>
+                    <li><strong>Beta Game Mod Update</strong> The Witness [<a href="apworlds.html#TheWitness">Link</a>]</li>
+                </ul>
+
+                <ul>
+                    <li><strong>Game Mod Update</strong> Blashphemous [<a href="apworlds.html#Blasphemous">Link</a>]</li>
+                    <li><strong>Game Mod Update</strong> Muse Dash [<a href="apworlds.html#MuseDash">Link</a>]</li>
+                </ul>
+
+                <ul>
+                    <li><strong>Manual APWorld Update</strong> Genshin Impact [<a href="apworlds.html#Manual">Link</a>]</li>
+                </ul>
+
+                <ul>
+                    <li><strong>Prerelease APWorld Update</strong> Muse Dash [<a href="apworlds.html#MuseDash">Link</a>]</li>
+                </ul>
+
                 <h2 id="D20240526">May 26th, 2024</h2>
 
                 <ul>
+                    <li><strong>APWorld Update</strong> Civilization VI [<a href="apworlds.html#CivilizationVI">Link</a>]</li>
                     <li><strong>APWorld Update</strong> Into the Breach [<a href="apworlds.html#IntoTheBreach">Link</a>]</li>
                     <li><strong>APWorld Update</strong> Kingdom Hearts RE: Chain of Memories [<a href="apworlds.html#KingdomHeartsREChainOfMemories">Link</a>]</li>
+                    <li><strong>APWorld Update</strong> osu! [<a href="apworlds.html#osu">Link</a>]</li>
                 </ul>
 
                 <ul>
                     <li><strong>Game Mod Update</strong> Into the Breach [<a href="apworlds.html#IntoTheBreach">Link</a>]</li>
+                    <li><strong>Game Mod Update</strong> Lunacid [<a href="apworlds.html#Lunacid">Link</a>]</li>
+                </ul>
+
+                <ul>
+                    <li><strong>Manual APWorld Update</strong> Phasmophobia [<a href="apworlds.html#Manual">Link</a>]</li>
+                    <li><strong>Manual APWorld Update</strong> Sly Cooper and the Thievius Raccoonus [<a href="apworlds.html#Manual">Link</a>]</li>
+                    <li><strong>Manual APWorld Update</strong> The Grinch [<a href="apworlds.html#Manual">Link</a>]</li>
+                </ul>
+
+                <ul>
+                    <li><strong>New Manual APWorld</strong> Dexsanity [<a href="apworlds.html#Manual">Link</a>]</li>
                 </ul>
 
                 <ul>
@@ -97,15 +133,15 @@
                 </ul>
 
                 <ul>
+                    <li><strong>Game Mod Update</strong> Muse Dash [<a href="apworlds.html#MuseDash">Link</a>]</li>
+                </ul>
+
+                <ul>
                     <li><strong>New Manual APWorld</strong> KoboldKare [<a href="apworlds.html#Manual">Link</a>]</li>
                 </ul>
 
                 <ul>
                     <li><strong>New Prerelease APWorld</strong> Muse Dash [<a href="apworlds.html#MuseDash">Link</a>]</li>
-                </ul>
-
-                <ul>
-                    <li><strong>New Prerelease Game Mod</strong> Muse Dash [<a href="apworlds.html#MuseDash">Link</a>]</li>
                 </ul>
 
                 <h2 id="D20240523">May 23rd, 2024</h2>
