--- a/index.html
+++ b/index.html
@@ -46,7 +46,28 @@
                     </p>
                 </header>
 
+                <h2 id="D20240528">May 28th, 2024</h2>
+
+                <ul>
+                    <li><strong>APWorld Update</strong> Mega Man X [<a href="apworlds.html#MegaManX">Link</a>]</li>
+                    <li><strong>APWorld Update</strong> Mega Man X3 [<a href="apworlds.html#MegaManX3">Link</a>]</li>
+                </ul>
+
+                <ul>
+                    <li><strong>Manual APWorld Update</strong> Bowser's Fury [<a href="apworlds.html#Manual">Link</a>]</li>
+                </ul>
+
+                <ul>
+                    <li><strong>New Manual APWorld</strong> Polyrhythm Mania [<a href="apworlds.html#Manual">Link</a>]</li>
+                </ul>
+
                 <h2 id="D20240527">May 27th, 2024</h2>
+                
+                <ul>
+                    <li><strong>APWorld Update</strong> Hades [<a href="apworlds.html#Hades">Link</a>]</li>
+                    <li><strong>APWorld Update</strong> Hatsune Miku: Project DIVA Mega Mix+ [<a href="apworlds.html#HatsuneMikuProjectDIVAMegaMix">Link</a>]</li>
+                    <li><strong>APWorld Update</strong> Scooby-Doo! Night of 100 Frights [<a href="apworlds.html#ScoobyDooNightOf100Frights">Link</a>]</li>
+                </ul>
 
                 <ul>
                     <li><strong>Beta APWorld Update</strong> The Witness [<a href="apworlds.html#TheWitness">Link</a>]</li>
@@ -58,15 +79,26 @@
 
                 <ul>
                     <li><strong>Game Mod Update</strong> Blashphemous [<a href="apworlds.html#Blasphemous">Link</a>]</li>
+                    <li><strong>Game Mod Update</strong> Hades [<a href="apworlds.html#Hades">Link</a>]</li>
                     <li><strong>Game Mod Update</strong> Muse Dash [<a href="apworlds.html#MuseDash">Link</a>]</li>
                 </ul>
 
                 <ul>
+                    <li><strong>Manual APWorld Update</strong> Black Souls [<a href="apworlds.html#Manual">Link</a>]</li>
                     <li><strong>Manual APWorld Update</strong> Genshin Impact [<a href="apworlds.html#Manual">Link</a>]</li>
+                    <li><strong>Manual APWorld Update</strong> Resident Evil 5 Gold Edition [<a href="apworlds.html#Manual">Link</a>]</li>
+                </ul>
+
+                <ul>
+                    <li><strong>New Manual APWorld</strong> Kirby Super Star (Talcerase's) [<a href="apworlds.html#Manual">Link</a>]</li>
                 </ul>
 
                 <ul>
                     <li><strong>Prerelease APWorld Update</strong> Muse Dash [<a href="apworlds.html#MuseDash">Link</a>]</li>
+                </ul>
+
+                <ul>
+                    <li><strong>Tracker Update</strong> Yu-Gi-Oh! Forbidden Memories [<a href="apworlds.html#YuGiOhForbiddenMemories">Link</a>]</li>
                 </ul>
 
                 <h2 id="D20240526">May 26th, 2024</h2>
