--- a/index.html
+++ b/index.html
@@ -46,6 +46,43 @@
                     </p>
                 </header>
 
+                <h2 id="D20240617">June 17th, 2024</h2>
+
+                <ul>
+                    <li><strong>APWorld Update</strong> ANIMAL WELL [<a href="apworlds.html#ANIMALWELL">Link</a>]</li>
+                    <li><strong>APWorld Update</strong> Into the Breach [<a href="apworlds.html#IntoTheBreach">Link</a>]</li>
+                    <li><strong>APWorld Update</strong> Metroid Prime [<a href="apworlds.html#MetroidPrime">Link</a>]</li>
+                    <li><strong>APWorld Update</strong> Psychonauts [<a href="apworlds.html#Psychonauts">Link</a>]</li>
+                    <li><strong>APWorld Update</strong> Wario Land 1 [<a href="apworlds.html#WarioLand1">Link</a>]</li>
+                </ul>
+
+                <ul>
+                    <li><strong>Beta APWorld Update</strong> Terraria [<a href="apworlds.html#Terraria">Link</a>]</li>
+                </ul>
+
+                <ul>
+                    <li><strong>Beta Game Mod Update</strong> Terraria [<a href="apworlds.html#Terraria">Link</a>]</li>
+                </ul>
+
+                <ul>
+                    <li><strong>Game Mod Update</strong> Hatsune Miku: Project DIVA Mega Mix+ [<a href="apworlds.html#HatsuneMikuProjectDIVAMegaMix">Link</a>]</li>
+                    <li><strong>Game Mod Update</strong> Into the Breach [<a href="apworlds.html#IntoTheBreach">Link</a>]</li>
+                </ul>
+
+                <ul>
+                    <li><strong>Game Update</strong> ChecksFinder [<a href="apworlds.html#ChecksFinder">Link</a>]</li>
+                </ul>
+
+                <ul>
+                    <li><strong>New Tracker</strong> ANIMAL WELL [<a href="apworlds.html#ANIMALWELL">Link</a>]</li>
+                    <li><strong>New Tracker</strong> Super Mario 64 [<a href="apworlds.html#SuperMario64">Link</a>]</li>
+                </ul>
+
+                <ul>
+                    <li><strong>Tracker Update</strong> DLC Quest [<a href="apworlds.html#DLCQuest">Link</a>]</li>
+                    <li><strong>Tracker Update</strong> Pokemon Red and Blue [<a href="apworlds.html#PokemonRedAndBlue">Link</a>]</li>
+                </ul>
+
                 <h2 id="D20240616">June 16th, 2024</h2>
 
                 <ul>
@@ -86,6 +123,7 @@
 
                 <ul>
                     <li><strong>Tracker Update</strong> Pokemon Red and Blue [<a href="apworlds.html#PokemonRedAndBlue">Link</a>]</li>
+                    <li><strong>Tracker Update</strong> Psychonauts [<a href="apworlds.html#Psychonauts">Link</a>]</li>
                 </ul>
 
                 <h2 id="D20240615">June 15th, 2024</h2>
