--- a/apworlds.html
+++ b/apworlds.html
@@ -50,7 +50,7 @@
                     </p>
                 </header>
 
-                <h2>APWorlds (171)</h2>
+                <h2>APWorlds (172)</h2>
 
                 <a href="#09">0-9</a>
                 <a href="#A">A</a>
@@ -91,6 +91,14 @@
                     <li><strong>Tracker (Alternate)</strong> [<a href="https://github.com/Mysteryem/ahit-poptracker/releases">Link</a>]</li>
                     <li><strong>Setup Guide</strong> [<a href="https://github.com/CookieCat45/Archipelago-ahit/blob/main/worlds/ahit/docs/setup_en.md">Link</a>]</li>
                     <li><strong>Discord Thread</strong> [<a href="https://discord.com/channels/731205301247803413/1120157130100572260">Link</a>]</li>
+                </ul>
+
+                <h3><span id="AirDelivery"></span> Air Delivery (PICO-8)</h3>
+
+                <ul>
+                    <li><strong>APWorld</strong> [<a href="https://github.com/qwint/ap-air-delivery/releases">Link</a>]</li>
+                    <li><strong>Setup Guide</strong> [<a href="https://github.com/qwint/ap-air-delivery/blob/main/apworld/docs/setup_en.md">Link</a>]</li>
+                    <li><strong>Discord Thread</strong> [<a href="https://discord.com/channels/731205301247803413/1252453771661803523">Link</a>]</li>
                 </ul>
 
                 <h3><span id="ALinkToThePast"></span> A Link to the Past (SNES)</h3>
@@ -556,6 +564,7 @@
 
                 <ul>
                     <li><strong>APWorld + Setup Guide</strong> [<a href="https://github.com/jamesbrq/GauntletLegendsAP/releases">Link</a>]</li>
+                    <li><strong>Tracker</strong> [<a href="https://github.com/Kryen112/gauntlet_legends_n64_ap_tracker/releases">Link</a>]</li>
                     <li><strong>Discord Thread</strong> [<a href="https://discord.com/channels/731205301247803413/1195336830258778183">Link</a>]</li>
                 </ul>
 
@@ -937,7 +946,7 @@
                 <h3><span id="OldSchoolRunescape"></span> Old School Runescape (PC)</h3>
 
                 <ul>
-                    <li><strong>APWorld + Game Mod</strong> [<a href="https://github.com/digiholic/Archipelago/releases">Link</a>]</li>
+                    <li><strong>APWorld</strong> [<a href="https://github.com/digiholic/Archipelago/releases">Link</a>]</li>
                     <li><strong>Setup Guide</strong> [<a href="https://github.com/digiholic/Archipelago/blob/osrs-world/worlds/osrs/docs/setup_en.md">Link</a>]</li>
                     <li><strong>Discord Thread</strong> [<a href="https://discord.com/channels/731205301247803413/1113198991845376170">Link</a>]</li>
                 </ul>
