--- a/index.html
+++ b/index.html
@@ -46,12 +46,25 @@
                     </p>
                 </header>
 
+                <h2 id="D20240618">June 18th, 2024</h2>
+
+                <ul>
+                    <li><strong>APWorld Update</strong> Hatsune Miku: Project DIVA Mega Mix+ [<a href="apworlds.html#HatsuneMikuProjectDIVAMegaMix">Link</a>]</li>
+                </ul>
+
+                <ul>
+                    <li><strong>Tracker Update</strong> Banjo-Tooie [<a href="apworlds.html#BanjoTooie">Link</a>]</li>
+                </ul>
+
                 <h2 id="D20240617">June 17th, 2024</h2>
 
                 <ul>
                     <li><strong>APWorld Update</strong> ANIMAL WELL [<a href="apworlds.html#ANIMALWELL">Link</a>]</li>
+                    <li><strong>APWorld Update</strong> Astalon: Tears of the Earth [<a href="apworlds.html#AstalonTearsOfTheEarth">Link</a>]</li>
+                    <li><strong>APWorld Update</strong> Hatsune Miku: Project DIVA Mega Mix+ [<a href="apworlds.html#HatsuneMikuProjectDIVAMegaMix">Link</a>]</li>
                     <li><strong>APWorld Update</strong> Into the Breach [<a href="apworlds.html#IntoTheBreach">Link</a>]</li>
                     <li><strong>APWorld Update</strong> Metroid Prime [<a href="apworlds.html#MetroidPrime">Link</a>]</li>
+                    <li><strong>APWorld Update</strong> Old School RuneScape [<a href="apworlds.html#OldSchoolRuneScape">Link</a>]</li>
                     <li><strong>APWorld Update</strong> Psychonauts [<a href="apworlds.html#Psychonauts">Link</a>]</li>
                     <li><strong>APWorld Update</strong> Wario Land 1 [<a href="apworlds.html#WarioLand1">Link</a>]</li>
                 </ul>
@@ -65,12 +78,21 @@
                 </ul>
 
                 <ul>
+                    <li><strong>Game Mod Update</strong> Astalon: Tears of the Earth [<a href="apworlds.html#AstalonTearsOfTheEarth">Link</a>]</li>
                     <li><strong>Game Mod Update</strong> Hatsune Miku: Project DIVA Mega Mix+ [<a href="apworlds.html#HatsuneMikuProjectDIVAMegaMix">Link</a>]</li>
                     <li><strong>Game Mod Update</strong> Into the Breach [<a href="apworlds.html#IntoTheBreach">Link</a>]</li>
                 </ul>
 
                 <ul>
                     <li><strong>Game Update</strong> ChecksFinder [<a href="apworlds.html#ChecksFinder">Link</a>]</li>
+                </ul>
+
+                <ul>
+                    <li><strong>Manual APWorld Update</strong> Powerwash Simulator [<a href="apworlds.html#Manual">Link</a>]</li>
+                </ul>
+
+                <ul>
+                    <li><strong>New APWorld</strong> Air Delivery [<a href="apworlds.html#AirDelivery">Link</a>]</li>
                 </ul>
 
                 <ul>
