--- a/index.html
+++ b/index.html
@@ -46,10 +46,42 @@
                     </p>
                 </header>
 
+                <h2 id="D20240623">June 23rd, 2024</h2>
+
+                <ul>
+                    <li><strong>APWorld Update</strong> Minit [<a href="apworlds.html#Minit">Link</a>]</li>
+                </ul>
+
+                <ul>
+                    <li><strong>Tracker Update</strong> An Untitled Story [<a href="apworlds.html#AnUntitledStory">Link</a>]</li>
+                </ul>
+
                 <h2 id="D20240622">June 22nd, 2024</h2>
 
                 <ul>
+                    <li><strong>APWorld Update</strong> Astalon: Tears of the Earth [<a href="apworlds.html#AstalonTearsOfTheEarth">Link</a>]</li>
+                </ul>
+
+                <ul>
+                    <li><strong>Game Mod Update</strong> Astalon: Tears of the Earth [<a href="apworlds.html#AstalonTearsOfTheEarth">Link</a>]</li>
+                    <li><strong>Game Mod Update</strong> TUNIC [<a href="apworlds.html#TUNIC">Link</a>]</li>
+                </ul>
+
+                <ul>
+                    <li><strong>Manual APWorld Update</strong> Adventure Forward 2 Restored [<a href="apworlds.html#Manual">Link</a>]</li>
+                    <li><strong>Manual APWorld Update</strong> Deep Rock Galactic [<a href="apworlds.html#Manual">Link</a>]</li>
+                    <li><strong>Manual APWorld Update</strong> Pokemon Legends: Arceus [<a href="apworlds.html#Manual">Link</a>]</li>
+                    <li><strong>Manual APWorld Update</strong> Splatoon 3 [<a href="apworlds.html#Manual">Link</a>]</li>
                     <li><strong>Manual APWorld Update</strong> The Grinch [<a href="apworlds.html#Manual">Link</a>]</li>
+                </ul>
+
+                <ul>
+                    <li><strong>New Manual APWorld</strong> Star Wars Battlefront 2 [<a href="apworlds.html#Manual">Link</a>]</li>
+                </ul>
+
+                <ul>
+                    <li><strong>Tracker Update</strong> Banjo-Tooie [<a href="apworlds.html#BanjoTooie">Link</a>]</li>
+                    <li><strong>Tracker Update</strong> Soul Blazer [<a href="apworlds.html#SoulBlazer">Link</a>]</li>
                 </ul>
 
                 <h2 id="D20240621">June 21st, 2024</h2>
